# bwa-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  agents.md  testing.md  tickets.md
.github/workflows/: ci.yml
archives/: tickets-2026-05-02.md
benches/: alignment_benchmark.rs  occ_benchmark.rs
docs/: PERFORMANCE.md  RELEASE-1.0.0.md  agents.md  bench_results.csv  tickets-archive-complete.md  tickets-archive.md  tickets.md  visualization_data.json
scripts/: ticket_runner.py
src/: alignment.rs  bam.rs  chaining.rs  compact.rs  error.rs  fastq.rs  fm_index.rs  lib.rs  main.rs  mem_finder.rs  mmap_index.rs  paired.rs  parallel.rs  parallel_seed.rs  reference.rs  sa.rs  sam.rs  seed.rs  simd_affine.rs  simd_sw.rs  types.rs  utils.rs
src/occ/: mod.rs  rrr.rs  wavelet_tree.rs
tests/: fm_index_large_ref.rs  integration.rs  paired_end.rs  test_fcolumn.rs  test_gggg.rs  test_sa_verify.rs  test_search_trace.rs
