[package]
name = "bwa-mem"
version = "0.1.0"
edition = "2021"
description = "Pure Rust BWA-MEM implementation for genomic alignment"
license = "MIT"
repository = "https://github.com/USER/bwa-mem"
authors = ["Jonathan Kirkland <jokirkland@ucsd.edu>"]
rust-version = "1.89"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
memmap2 = "0.9"
flate2 = "1"
sa-is = "0.1.0"
libsais-rs = "0.1"
wavelet-matrix = "0.4.7"
rayon = "1.10"

[lints.rust]
unsafe_code = "deny"  # Allow per-module with #[allow(unsafe_code)]

[profile.release]
opt-level = 3
lto = true
